syntax = "proto3";

option csharp_namespace = "DBManager.Mobile";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Protos/models.proto";
package table;

service Tables {
  rpc CreateTable (google.protobuf.StringValue) returns (models.Table);
  rpc DeleteTable (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
  rpc RenameTable (RenameTableRequest) returns (google.protobuf.BoolValue);
  rpc Difference (DifferenceRequest) returns (models.Table);
  rpc GetTableByName (google.protobuf.StringValue) returns (models.Table);
}

message RenameTableRequest{
	string oldTableName = 1;
	string newTableName = 2;
}
message DifferenceRequest{
	string firstTableName = 1;
	string secondTableName = 2;
}